[project]
name = "scrape-website"
version = "0.2.0"
description = "Async website scraper that downloads all pages and documents from a domain"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "aiofiles>=24.1.0",
    "aiodns>=3.2.0",
    "lxml>=5.3.0",
    "trafilatura>=2.0.0",
]
